<resources>
    <string name="app_name">Submission Final</string>
    <string name="search" translatable="false">Search Username</string>
    <string name="noResult" translatable="false">Find Users!</string>
    <string name="searchForResult" translatable="false">Click Search Icon and Find What You looking for</string>
    <string name="login" translatable="false">Login</string>
    <string name="location" translatable="false">location</string>
    <string name="repo" translatable="false">Repository</string>
    <string name="language" translatable="false">Change Language</string>

    <string name="tab_text1" translatable="false">followers</string>
    <string name="tab_text2" translatable="false">following</string>
    <string name="username" translatable="false">Username</string>
    <string name="twiceback" translatable="false">Click BACK again to exit</string>
    <string name="splash_copyright" translatable="false">Copyright © 2020 by Uwais Alqadri</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="favorite" translatable="false">Favorite User</string>
    <string name="reminder" translatable="false">Set Reminder</string>
    <string name="empty" translatable="false">Favorite User is Empty</string>
    <string name="reminderdesc" translatable="false">Send daily notification at 09.00 AM</string>
    <string name="favorite_widget_empty" translatable="false">You doesn\'t have favorite users</string>
    <string name="notification_text_on_nine" translatable="false">It\'s 09.00 AM, Time to Open The App</string>
    <string name="reminder_off_toast" translatable="false">Reminder off</string>
    <string name="reminder_on_toast" translatable="false">Reminder on</string>
    <string name="profile_pict" translatable="false">User Profile Pict</string>
</resources>