<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.activity.MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search"
        android:textColorHint="@android:color/black"
        app:startIconDrawable="@drawable/search"
        app:startIconTint="@android:color/black"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:boxBackgroundMode="none"
        app:endIconTint="@android:color/transparent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textSize="17sp"
            android:fontFamily="@font/mregular"
            android:imeOptions="actionSearch" />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_below="@id/text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

         <RelativeLayout
             android:id="@+id/no_result_layout"
             android:layout_width="310dp"
             android:layout_height="310dp"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="50dp">

             <ImageView
                 android:id="@+id/main_illustration"
                 android:layout_width="210dp"
                 android:layout_height="210dp"
                 android:src="@drawable/unboxing"
                 android:layout_centerHorizontal="true"/>

             <TextView
                 android:id="@+id/no_result"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/noResult"
                 android:textAlignment="center"
                 android:textSize="18sp"
                 android:textColor="@android:color/black"
                 android:fontFamily="@font/msemibold"
                 android:layout_below="@id/main_illustration" />

             <TextView
                 android:layout_below="@+id/no_result"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
                 android:fontFamily="@font/mregular"
                 android:text="@string/searchForResult" />

         </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/user_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/list_item"
            />

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:visibility="gone"/>

    </RelativeLayout>

</RelativeLayout>